// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CoverDemo Cover change visible 1`] = `
<body>
  <div>
    <div
      class="eui-wingblank Cover eui-wingblank-m"
    >
      <h4>
        Cover
      </h4>
      <button
        class="eui-button eui-button-l eui-button-customize eui-button-ghost"
        role="button"
      >
        Cover
      </button>
      <div
        class="eui-Cover"
      />
      <div
        class="eui-whitespace eui-whitespace-m"
      />
      <button
        class="eui-button eui-button-l eui-button-customize eui-button-ghost"
        role="button"
      >
        Cover | transparent
      </button>
      <div
        class="eui-Cover eui-Cover-transparent"
      />
      <div
        class="eui-whitespace eui-whitespace-m"
      />
      <h4>
        Cover.Transition
      </h4>
      <button
        class="eui-button eui-button-l eui-button-customize eui-button-ghost"
        role="button"
      >
        Cover.Transition | Portal
      </button>
    </div>
  </div>
  <div
    class="eui-Cover eui-fade-entry-done eui-fade"
  />
</body>
`;

exports[`renders Cover correctly 1`] = `
<div>
  <div
    class="eui-wingblank Cover eui-wingblank-m"
  >
    <h4>
      Cover
    </h4>
    <button
      class="eui-button eui-button-l eui-button-customize eui-button-ghost"
      role="button"
    >
      Cover
    </button>
    <div
      class="eui-whitespace eui-whitespace-m"
    />
    <button
      class="eui-button eui-button-l eui-button-customize eui-button-ghost"
      role="button"
    >
      Cover | transparent
    </button>
    <div
      class="eui-whitespace eui-whitespace-m"
    />
    <h4>
      Cover.Transition
    </h4>
    <button
      class="eui-button eui-button-l eui-button-customize eui-button-ghost"
      role="button"
    >
      Cover.Transition | Portal
    </button>
  </div>
</div>
`;
